@@ -7,6 +7,8 @@
 ! wide enough and have enough precision, by checking that values can
 ! be written and read back.
 !
+! { dg-options "-mieee" { target alpha*-*-* } }
+
 include "default_format_2.inc"
 
 program main
