@@ -1,3 +1,13 @@
+2009-09-16  Uros Bizjak  <ubizjak@gmail.com>
+
+	* gfortran.dg/default_format_denormal_2.f90: Add ieee options.
+	* gfortran.dg/default_format_denormal_1.f90: Ditto.  Remove
+	alpha*-*-* target from XFAIL list.
+
+2009-09-16  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/alignment9.adb: New test.
+
 2009-09-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/debug/dwarf2/struct-loc1.c: New test.
