@@ -1,3 +1,9 @@
+2009-09-16  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/trans.c (Attribute_to_gnu) <Attr_Size>: Strip
+	conversions between original and packable version of types from
+	the expression.
+
 2009-09-14  Richard Henderson  <rth@redhat.com>
 
 	* gcc-interface/trans.c (Pragma_to_gnu): Use build5 for ASM_EXPR.
